# Vector-Interior-Design

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  next.config.mjs  package-lock.json  package.json  tsconfig.json
backend/: .dockerignore  pyproject.toml
backend/admin/: .dockerignore  Dockerfile  package-lock.json  package.json  requirements.txt  tsconfig.json
backend/admin/migrations/: 1731781890_initialization_1_down.sql  1731781890_initialization_1_up.sql
backend/admin/src/: app.py  index.ts
backend/admin/src/auth/: __init__.py  authentication.py  routes.py  user.py
backend/admin/src/database/: __init__.py  database.py  database.ts  migrations.py
backend/admin/src/db/: database.py  migrations.py
backend/admin/src/resources/: obra.py  routes.py  utils.py
backend/common/: database.py  requirements.txt  routes.py
backend/src/admin/: .dockerignore  Dockerfile  README.md  app.py  entrypoint.sh  graphql.yml  migrations.py  newMigration.sh
backend/src/admin/auth/: __init__.py  authentication.py  decorators.py  errors.py  routes.py  session.py  user.py
backend/src/admin/cli/: migrations.py  users.py
backend/src/admin/db/: database.py  migrations.py
backend/src/admin/docs/: index.html
backend/src/admin/migrations/: 1731781890_initialization_1_down.sql  1731781890_initialization_1_up.sql  1735069284_mainPageConfig_2_down.sql  1735069284_mainPageConfig_2_up.sql  1735584851_descriptionStyle_3_down.sql  1735584851_descriptionStyle_3_up.sql  1735908877_imageConfig_4_down.sql  1735908877_imageConfig_4_up.sql  1735946966_imageDescAlign_5_down.sql  1735946966_imageDescAlign_5_up.sql  1735958846_imageDescFont_6_down.sql  1735958846_imageDescFont_6_up.sql  1736273579.9376376_translation_7_down.sql  1736273579.9376376_translation_7_up.sql  1736346926.195786_mainPageRework_8_down.sql  1736346926.195786_mainPageRework_8_up.sql  1736863928.5708702_uniqueMainPage_9_down.sql  1736863928.5708702_uniqueMainPage_9_up.sql  (+12 more)
backend/src/common/: database.py  obra.py  resource_manager.py  routes.py  types.py  utils.py
backend/src/user/: .dockerignore  Dockerfile  README.md  app.py  entrypoint.sh
backend/tests/: Dockerfile  conftest.py
backend/tests/database/: conftest.py  test_database.py
backend/user/: Dockerfile  requirements.txt
backend/user/src/: app.py  db.py  obra.py  routes.py
database/: Dockerfile  (+2 more)
(+290 files in other folders)
