[tool.poetry]
name = "tq-portfolio-backend"
version = "0.1.0"
description = "Admin backend for the TQ portfolio"
authors = ["Maypher <maypheroffcial@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg = "^3.2.3"
# strawberry-graphql = "^0.257.0" # This is a temporary change until the bug fix is merged into the official repo
strawberry-graphql = { git = "https://github.com/Maypher/strawberry.git", branch = "sanic-file-fix" }
sanic = { extras = ["ext"], version = "^24.12.0" }
cloudinary = "^1.42.2"

[tool.poetry.group.admin]
optional = true

[tool.poetry.group.admin.dependencies]
bcrypt = "^4.2.1"
aiofiles = "^24.1.0"
requests = "^2.32.3"
aiohttp = "^3.11.13"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
mimesis = "^18.0.0"
pytest-asyncio = "^0.25.2"
sanic-testing = "^24.6.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
